# t4

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README  README.in  TODO  autogen.sh  configure.ac  index.html  params.json  t4.m4.in  t4c.sh.in
Documentation/: .gitignore  Makefile.am  mkxml.sh
examples/: .gitignore  Makefile.am  demo.t4  hello-world.t4
